outline/service.yml
apiVersion: v1
kind: Service
metadata:
  name: outline-service
spec:
  selector:
    app: outline
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
