outline/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: outline.limtaehyun.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline-service
                port:
                  number: 80
